// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCard renderiza correctamente con props mínimas 1`] = `
<View
  accessibilityLabel="El Señor de los Anillos"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "uri": "https://example.com/cover.jpg",
      }
    }
    style={
      {
        "aspectRatio": 0.6666666666666666,
        "backgroundColor": "#e0e0e0",
        "borderRadius": 6,
        "width": "100%",
      }
    }
    testID="book-cover"
  />
  <Text
    numberOfLines={2}
    style={
      {
        "color": "#333",
        "fontSize": 11,
        "marginTop": 6,
        "textAlign": "center",
      }
    }
    testID="book-title"
  >
    El Señor de los Anillos
  </Text>
</View>
`;

exports[`BookCard renderiza correctamente sin portada (usa placeholder) 1`] = `
<View
  accessibilityLabel="El Señor de los Anillos"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "uri": "https://via.placeholder.com/100x150?text=Sin+Portada",
      }
    }
    style={
      {
        "aspectRatio": 0.6666666666666666,
        "backgroundColor": "#e0e0e0",
        "borderRadius": 6,
        "width": "100%",
      }
    }
    testID="book-cover"
  />
  <Text
    numberOfLines={2}
    style={
      {
        "color": "#333",
        "fontSize": 11,
        "marginTop": 6,
        "textAlign": "center",
      }
    }
    testID="book-title"
  >
    El Señor de los Anillos
  </Text>
</View>
`;
